Bug 300660 - attached file - name change not working
Summary: attached file - name change not working
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-26 12:08 UTC by Roland
Modified: 2012-08-13 14:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland 2012-05-26 12:08:22 UTC
Task: The name of an attached file shall be changed. 
In the related properties dialog (message part properties) the name can now be modified as expected.
When the e-mail is subsequently saved to the outbox folder (or sent to the recipient) the name of the attached file remains as before - nevertheless, in the properties dialog the new name is still available.

Reproducible: Always

Steps to Reproduce:
1. attach a file to an e-mail 
2. open the properties dialog
3. modify name
4. save e-mail to outbox folder
5. check name of attached file
Actual Results:  
see above

Expected Results:  
see above

refer also to # 279757
Comment 1 Laurent Montel 2012-05-27 13:07:43 UTC
I confirm it
Comment 2 Laurent Montel 2012-05-27 13:42:17 UTC
Git commit f40e2760e47251a3aaf75ef70b046e11895a5d1c by Montel Laurent.
Committed on 27/05/2012 at 15:41.
Pushed by mlaurent into branch 'master'.

Fix Bug 300660 - attached file - name change not working

Use name and not filename. Otherwise define a name is not usefull

FIXED-IN: 4.8.4

M  +2    -1    messageviewer/nodehelper.cpp
M  +2    -1    messageviewer/objecttreeparser.cpp

http://commits.kde.org/kdepim/f40e2760e47251a3aaf75ef70b046e11895a5d1c
Comment 3 Laurent Montel 2012-05-27 13:43:09 UTC
Git commit 822ae3c1af65949927b9d0f034b46dce0ebca09f by Montel Laurent.
Committed on 27/05/2012 at 15:41.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 300660 - attached file - name change not working

Use name and not filename. Otherwise define a name is not usefull

FIXED-IN: 4.8.4
(cherry picked from commit f40e2760e47251a3aaf75ef70b046e11895a5d1c)

M  +2    -1    messageviewer/nodehelper.cpp
M  +2    -1    messageviewer/objecttreeparser.cpp

http://commits.kde.org/kdepim/822ae3c1af65949927b9d0f034b46dce0ebca09f
Comment 4 Roland 2012-06-10 17:58:59 UTC
Fix works in 4.8.4, thanks a lot!
Comment 5 Matti Kettunen 2012-08-13 14:28:44 UTC
I think this bug still exists! (I'm using version 4.8.5)

Take a look at the message source:
---------
--nextPart1369570.SdQimZytJM
Content-Disposition: attachment; filename="oldname.jpg"
Content-Transfer-Encoding: base64
Content-Type: image/jpeg; name="newname.jpg"
---------

If you read the message with KMail newname.jpg will be shown but if you save the attachment oldname.jpg will be used.
Many other email clients or webmails show only oldname.jpg.