Fix Bug 300660 - attached file - name change not working

Use name and not filename. Otherwise define a name is not usefull

FIXED-IN: 4.8.4
BUG: 300660
(cherry picked from commit f40e2760e47251a3aaf75ef70b046e11895a5d1c)